--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,3 +1,4 @@
+# Build Stage
 FROM node:20-alpine as builder
 WORKDIR /app
 COPY package*.json ./
@@ -5,8 +6,10 @@ RUN npm install
 COPY . .
 RUN npm run build
 
+# Serve Stage
 FROM nginx:alpine
-COPY --from=builder /app/build /usr/share/nginx/html
+# FIX: Change 'build' to 'dist' because Vite outputs to 'dist'
+COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
